<resources>
    <string name="app_name">Theo\'s eRestaurant</string>
    <string name="entree_name">Entrées</string>
    <string name="plats_name">Plats</string>
    <string name="desserts_name">Desserts</string>
    <string name="Panier">Mon panier</string>
    <string name="panier_vide">Votre panier est vide</string>
    <string name="ble_scan_play">Lancer le scan</string>
    <string name="ble_scan_pause">Scan BLE en cours …</string>
    <string name="ble_scan_error">BLE non disponique sur cet appareil</string>
    <string name="detail_ajouter">Ajouter au panier : %1$s €</string>
    <string name="detail_prix">Prix/unité : %1$s €</string>
    <string name="detail_ingredients">Ingrédients : %1$s </string>
    <string name="detail_modifier">Modifier : %1$s €</string>
    <string name="detail_supprimer">Supprimer</string>
    <string name="detail_total">Total : %1$s €</string>
    <string name="ble_uuid">UUID : %1$s €</string>
    <string name="ble_proprietes">Propriétés : %1$s €</string>
    <string name="connected">Status : Connecté</string>
    <string name="disconnected">Status : Déconnecté</string>
    <string name="connexion">Status : Connexion en cours...</string>
    <string-array name="categoryList">
        <item>entree</item>
        <item>plat</item>
        <item>dessert</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ecrire">Ecrire</string>
    <string name="lecture">Lecture</string>
    <string name="notifier">Notifier</string>
    <string name="ble_device_write_characteristic_title">Ecrire la valeur</string>
    <string name="ble_device_write_characteristic_confirm">Valider</string>
    <string name="ble_device_write_characteristic_cancel">Annuler</string>
    <string name="ble_scan_default_name">Appareil inconnu</string>
</resources>